--- a/style.css
+++ b/style.css
@@ -104,3 +104,23 @@ table {
 td {
     padding: 10px 20px 10px 0px;
 }
+
+.skill img {
+  width: 50px;
+}
+
+h2 {
+  text-align: center;
+}
+
+.portfolio .card {
+  border: 2px solid;
+  width: max-content;
+}
+
+button {
+  width: max-content;
+  padding: 10px;
+  border-radius: 5px;
+}
+
