--- a/css/components/root.css
+++ b/css/components/root.css
@@ -10,7 +10,10 @@
   --size-30: 30px;
   --size-35: 35px;
   --size-40: 40px;
-  --size-60: 60px;
+  --size-60: 60px; 
+  --size-300: 300px; 
+
+  --max: max-content;
   /* Color */
   --blue: blue;
   --white: white;
